tests/snapshots/output__show_help.snap
---
source: tests/output.rs
info:
  program: losrs
  args:
    - "--config=[TMP_DIR]/losrs.toml"
    - show
    - "--help"
  envs: {}
  page_lines:
    - - ""
---
success: true
exit_code: 0
----- stdout -----
Print cards

Usage: losrs show <PATH> [CARD_ID]

Arguments:
  <PATH>     The path to the page file or graph root directory
  [CARD_ID]  Card's serial number or fingerprint of the card's prompt. Use `metadata` command to find either

Options:
  -h, --help  Print help

----- stderr -----
